--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,13 @@
         android:theme="@style/Theme.ClubDeportivo"
         tools:targetApi="31">
         <activity
-            android:name=".RegustryClient"
+            android:name=".RegistryClient"
             android:exported="false" />
         <activity
             android:name=".PrincipalScrreen"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".Login"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
