--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.ClubDeportivo"
         tools:targetApi="31">
         <activity
+            android:name=".PrintLicense"
+            android:exported="false" />
+        <activity
             android:name=".License"
             android:exported="false" />
         <activity
@@ -22,7 +25,7 @@
             android:name=".RegistryClient"
             android:exported="false" />
         <activity
-            android:name=".PrincipalScrreen"
+            android:name=".PrincipalScreen"
             android:exported="false" />
         <activity
             android:name=".Login"
