--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.ClubDeportivo"
         tools:targetApi="31">
         <activity
+            android:name=".Invoice"
+            android:exported="false" />
+        <activity
+            android:name=".PayFee"
+            android:exported="false" />
+        <activity
+            android:name=".ListFee"
+            android:exported="false" />
+        <activity
             android:name=".PrintLicense"
             android:exported="false" />
         <activity
